fix: Correct relay JSON and add bridge reload command